--- a/css/imoptimal-public.css
+++ b/css/imoptimal-public.css
@@ -4,9 +4,19 @@
 
 /* Animation duration */
 
+.imo-duration-half {
+    -webkit-animation-duration: 0.5s;
+    animation-duration: 0.5s; 
+}
+
 .imo-duration-one {
     -webkit-animation-duration: 1s;
     animation-duration: 1s; 
+}
+
+.imo-duration-one-half {
+    -webkit-animation-duration: 1.5s;
+    animation-duration: 1.5s; 
 }
 
 .imo-duration-two {
@@ -14,14 +24,29 @@
     animation-duration: 2s;
 }
 
+.imo-duration-two-half {
+    -webkit-animation-duration: 2.5s;
+    animation-duration: 2.5s; 
+}
+
 .imo-duration-three {
     -webkit-animation-duration: 3s;
     animation-duration: 3s;
 }
 
+.imo-duration-three-half {
+    -webkit-animation-duration: 3.5s;
+    animation-duration: 3.5s; 
+}
+
 .imo-duration-four {
     -webkit-animation-duration: 4s;
     animation-duration: 4s;
+}
+
+.imo-duration-four-half {
+    -webkit-animation-duration: 4.5s;
+    animation-duration: 4.5s; 
 }
 
 .imo-duration-five {
@@ -63,9 +88,19 @@
 
 /* Animation delay */
 
+.imo-delay-half {
+    -webkit-animation-delay: 0.5s;
+    animation-delay: 0.5s;
+}
+
 .imo-delay-one {
     -webkit-animation-delay: 1s;
     animation-delay: 1s;
+}
+
+.imo-delay-one-half {
+    -webkit-animation-delay: 1.5s;
+    animation-delay: 1.5s;
 }
 
 .imo-delay-two {
@@ -73,14 +108,29 @@
     animation-delay: 2s;
 }
 
+.imo-delay-two-half {
+    -webkit-animation-delay: 2.5s;
+    animation-delay: 2.5s;
+}
+
 .imo-delay-three {
     -webkit-animation-delay: 3s;
     animation-delay: 3s;
 }
 
+.imo-delay-three-half {
+    -webkit-animation-delay: 3.5s;
+    animation-delay: 3.5s;
+}
+
 .imo-delay-four {
     -webkit-animation-delay: 4s;
     animation-delay: 4s;
+}
+
+.imo-delay-four-half {
+    -webkit-animation-delay: 4.5s;
+    animation-delay: 4.5s;
 }
 
 .imo-delay-five {
