--- a/css/imoptimal-public.css
+++ b/css/imoptimal-public.css
@@ -1,144 +1,4 @@
-/* Front-end styles */
-
-@charset "UTF-8";
-
-/* Animation duration */
-
-.imo-duration-half {
-    -webkit-animation-duration: 0.5s;
-    animation-duration: 0.5s; 
-}
-
-.imo-duration-one {
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s; 
-}
-
-.imo-duration-one-half {
-    -webkit-animation-duration: 1.5s;
-    animation-duration: 1.5s; 
-}
-
-.imo-duration-two {
-    -webkit-animation-duration: 2s;
-    animation-duration: 2s;
-}
-
-.imo-duration-two-half {
-    -webkit-animation-duration: 2.5s;
-    animation-duration: 2.5s; 
-}
-
-.imo-duration-three {
-    -webkit-animation-duration: 3s;
-    animation-duration: 3s;
-}
-
-.imo-duration-three-half {
-    -webkit-animation-duration: 3.5s;
-    animation-duration: 3.5s; 
-}
-
-.imo-duration-four {
-    -webkit-animation-duration: 4s;
-    animation-duration: 4s;
-}
-
-.imo-duration-four-half {
-    -webkit-animation-duration: 4.5s;
-    animation-duration: 4.5s; 
-}
-
-.imo-duration-five {
-    -webkit-animation-duration: 5s;
-    animation-duration: 5s;
-}
-
-/* Animation repetition */
-
-.imo-repetition-one {
-    -webkit-animation-iteration-count: 1;
-    animation-iteration-count: 1;
-}
-
-.imo-repetition-two {
-    -webkit-animation-iteration-count: 2;
-    animation-iteration-count: 2;
-}
-
-.imo-repetition-three {
-    -webkit-animation-iteration-count: 3;
-    animation-iteration-count: 3;
-}
-
-.imo-repetition-four {
-    -webkit-animation-iteration-count: 4;
-    animation-iteration-count: 4;
-}
-
-.imo-repetition-five {
-    -webkit-animation-iteration-count: 5;
-    animation-iteration-count: 5;
-}
-
-.imo-repetition-infinite {
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
-}
-
-/* Animation delay */
-
-.imo-delay-half {
-    -webkit-animation-delay: 0.5s;
-    animation-delay: 0.5s;
-}
-
-.imo-delay-one {
-    -webkit-animation-delay: 1s;
-    animation-delay: 1s;
-}
-
-.imo-delay-one-half {
-    -webkit-animation-delay: 1.5s;
-    animation-delay: 1.5s;
-}
-
-.imo-delay-two {
-    -webkit-animation-delay: 2s;
-    animation-delay: 2s;
-}
-
-.imo-delay-two-half {
-    -webkit-animation-delay: 2.5s;
-    animation-delay: 2.5s;
-}
-
-.imo-delay-three {
-    -webkit-animation-delay: 3s;
-    animation-delay: 3s;
-}
-
-.imo-delay-three-half {
-    -webkit-animation-delay: 3.5s;
-    animation-delay: 3.5s;
-}
-
-.imo-delay-four {
-    -webkit-animation-delay: 4s;
-    animation-delay: 4s;
-}
-
-.imo-delay-four-half {
-    -webkit-animation-delay: 4.5s;
-    animation-delay: 4.5s;
-}
-
-.imo-delay-five {
-    -webkit-animation-delay: 5s;
-    animation-delay: 5s;
-}
-
-/*!
+/* Front-end styles
 * Based on
 * animate.css - https://daneden.github.io/animate.css/
 * Version - 3.7.2
@@ -146,6 +6,7 @@
 *
 * Copyright (c) 2019 Daniel Eden
 */
+@charset "UTF-8";
 
 @-webkit-keyframes bounce {
     from,
